--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 # Your API Key for OpenAI
 OPENAI_API_KEY="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"
 # Provide proxy for OpenAI API. e.g. http://127.0.0.1:7890
-HTTPS_PROXY=
+HTTPS_PROXY="https://chatgpt.hongthai.tech/"
 # Custom base url for OpenAI API. default: https://api.openai.com
-OPENAI_API_BASE_URL=
+OPENAI_API_BASE_URL="https://api.openai.com"
 # Inject analytics or other scripts before </head> of the page
 HEAD_SCRIPTS=
 # Secret string for the project. Use for generating signatures for API calls
